Fix Spacing

--- a/style.css
+++ b/style.css
@@ -16,19 +16,23 @@ h1{
     font-size: 96px;
     line-height: 0.5;
     text-align: center;
+    margin: 0.5em auto;
     
 }
 
-h2{
+body h2{
     font-weight: 800;
     font-size: 28px;
     color: white;
     text-align: center;
+    margin: auto;
+    
    
 }
 
-#container h2{
+#container h2{ 
     color: black;
+    margin: 1em;
 }
 
 #container{
@@ -36,8 +40,6 @@ h2{
     width: 40%;
     margin: 0 auto 1em auto;
     border-radius: 25px;
-
-   
     
     border: 10px solid #03dac6;
     background-color: #018786;
